Configured TestFX properly, migrated testing into EditorLauncherTest file